Created and Styled Hero Section
Former-commit-id: dc2359db72bb5564bfd38aad6a21f67e464161c7

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -3,17 +3,61 @@
 
 .navbar {
 	font-family: 'Volkhov', serif;
-	font-weight: 500;
+	font-weight: 200;
 	box-shadow: 0px 1px 3px #2a2a2a;
-	background: image_url('leaves.png');
+	background: image_url('prisms.png');
 }
 
-.navbar-inverse a.navbar-brand {
-  	font-family: 'Volkhov', serif;
-  	font-weight: 100; 
-  	color: white;	
+.navbar-light a.navbar-brand {
+	font-family: 'Volkhov', serif;
+	font-weight: 100; 
+	color: white;
+	font-size: 48px;
 }
 
-body {
-	color: #036018;
+.navbar-light .navbar-nav .nav-link{
+	color: white;
+}
+
+.hero {
+	background: image_url('hero.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 370px;
+	box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+h1, h2, h3, h4, h5, h6, .navbar {
+	margin: 0;
+}
+
+.frosty {
+	background: rgba(0, 0, 0, 0.5);
+	color: white;
+}
+
+.frosty h1 {
+	font-family: "Helvetica Neue", Helvetica;
+	font-weight: 100;
+	text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.frosty h2 {
+	font-family: "Helvetica Neue", Helvetica;
+	font-weight: 200;
+	text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.btn {
+	border-radius: 0;
+	background-color: #55C2B7;
+	border-color: #55C2B7;
+}
+
+.btn:hover, .btn:focus, .btn:active, .btn.active, .open>.dropdown-toggle.btn {
+	color: black;
+	background-color: white;
+	border-color: white;
 }
