--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,11 +2,31 @@
 	<br />
 	<div class="frosty col-10 offset-1 text-center">
 		<br />
-		<h1>Learn Magic from the Pros</h1>
+			<h1>Learn to Code from the Pros</h1>
 		<br />
-		<h2>I'm an illusionist, Madeline.</h2>
+			<h2>I'm your guide -- Madeline.</h2>
 		<br />
-		<%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+			<%= link_to 'Learn More', '#', class: 'btn btn-success' %>
 		<br /><br />
+		<br />
+			<div class="row feature text-center">
+				<div class="col-12 col-sm">
+					<h3>Amazing Courses</h3>
+					<br />
+					<p>Choose from any number of courses to study with amazing teachers.</p>	
+				</div>	
+
+				<div class="col-12 col-sm">
+					<h3>Learn At Your Own Pace</h3>	
+					<br />
+    				<p>Enroll and access a courses archive of lessons.</p>
+				</div>	
+
+				<div class="col-12 col-sm">
+					<h3>Join Our Community</h3>
+					<br />
+					<p>Learn with a community of like-minded individuals.</p>	
+				</div>	
+			</div>
 	</div>
 </div>
