--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Volkhov&display=swap');
 
 .navbar {
-	font-family: 'Volkhov', serif;
-	font-weight: 200;
+	/*font-family: 'Volkhov', serif;
+	font-weight: 200;*/
 	box-shadow: 0px 1px 3px #2a2a2a;
 	background: image_url('prisms.png');
 }
@@ -15,8 +15,17 @@
 	font-size: 48px;
 }
 
-.navbar-light .navbar-nav .nav-link{
+.navbar-light a.navbar-brand:hover {
+	color: #E5BE7A;
+}
+
+.navbar-light .navbar-nav .nav-link {
 	color: #EDE7DB;
+	font-family: 'Volkhov', serif;
+}
+
+.navbar-toggleable-md .navbar-nav .nav-link:hover {
+	color: #24838A
 }
 
 .hero {
@@ -62,8 +71,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn:hover, .btn:focus, .btn:active, .btn.active, .open>.dropdown-toggle.btn {
 	color: black;
-	background-color: white;
-	border-color: white;
+	background-color: #E5BE7A;
+	border-color: #E5BE7A;
 }
 
 .feature {
@@ -82,3 +91,13 @@ body {
 	background: image_url("gray_sand.png");
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
+
+.alert-info {
+	font-family: 'Volkhov', serif;
+	background-color: #24838A;
+	max-width: fit-content;
+	color: #E5BE7A;
+	border-color: #24838A;
+	margin-inline-start: auto;
+}
+
