--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 h3 {
 	font-family: "Helvetica Neue", Helvetica;
 	font-weight: 200;
-	color: #EDE7DB
+	color: #EDE7DB;
 }
 
 body {
@@ -101,3 +101,26 @@ body {
 	margin-inline-start: auto;
 }
 
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #EDE7DB;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  color: darkslategrey;
+  padding: 10px;
+}
+
+.booyah-box h2, .booyah-box h1 {
+  margin: 10px;
+}
+
+a {
+	color: #24838A;
+	font-family: 'Volkhov', serif
+}
+
+a:hover {
+	color: darkslategrey;
+}
