--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,10 +4,11 @@
 		<br />
 			<h1>Learn to Code from the Pros</h1>
 		<br />
-			<h2>I'm your guide -- Madeline.</h2>
+			<h2>I'm your guide — Madeline.</h2>
 		<br />
-			<%= link_to 'Learn More', '#', class: 'btn btn-success' %>
-		<br /><br />
+			<%= link_to 'Learn More', '#', class: 'btn btn-lg btn-success' %>
+		<br />
+		<br />
 		<br />
 			<div class="row feature text-center">
 				<div class="col-12 col-sm">
