--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -127,3 +127,11 @@ a:hover {
 .navbar-toggler {
 	background: #24838A;
 }
+ 
+.invalid-feedback {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+  margin : 10px;
+}
