Created Course List Page and Routed from Home Page
Former-commit-id: 80b683bfe96cfbfd810a71ff275198f3e71583f0

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,7 +6,7 @@
 		<br />
 			<h2>I'm your guide — Madeline.</h2>
 		<br />
-			<%= link_to 'Learn More', '#', class: 'btn btn-lg btn-success' %>
+			<%= link_to 'Learn More', courses_path, class: 'btn btn-lg btn-success' %>
 		<br />
 		<br />
 		<br />
