Created the Student Course Page
Former-commit-id: e2dcd0808898a1f5620beb9b6de3d931808c7777

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -143,3 +143,12 @@ a:hover {
 .clr {
 	clear: both;
 }
+
+.badge {
+	font-size: 90%
+	/*color: beige;*/
+}
+
+.badge-default {
+	background-color: #24838A
+	}
