Installed Carrierwave Gems: Figaro,fog-aws, and mini_magick
Former-commit-id: 6891d5ad6c50a75dfdfe2fd910e18aa941374a32

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,9 @@
 
     <div id="footer">
       <div class="container">
-        <b>Teachers</b>
+        <b>Administrators</b>
         <br />
-        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <%= link_to 'Create a Course', new_instructor_course_path %>
       </div>
     </div>
   </body>
