--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,13 +2,15 @@
 
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center">Course List</h1>
-  <hr />
+  
+ <hr />
 
   <% @courses.each do |course| %>
     <h2 class="text-center">
     	<%= link_to course.title, course_path(course) %>
     </h2>
     <br />
+    <%= image_tag course.image.to_s, class: 'img-fluid' %> 
     <div class="row">
 	    <div class="col-sm-8 col-12">
 	      <%= course.description %>
