--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -5,7 +5,7 @@
 	/*font-family: 'Volkhov', serif;
 	font-weight: 200;*/
 	box-shadow: 0px 1px 3px #2a2a2a;
-	background: image_url('prisms.png');
+	//background: image_url('prisms.png');
 }
 
 .navbar-light a.navbar-brand {
