Styled Lesson Page
Former-commit-id: 65bc329d04e5dbdce9c1d2c90e3676a5744ee6c9

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -150,5 +150,39 @@ a:hover {
 }
 
 .badge-default {
-	background-color: #24838A
+	background-color: #24838A;
 	}
+.lesson {
+  background: #24838A;
+  margin-top: 10px;
+  height: 100px;
+}
+
+.img {
+  vertical-align: text-bottom;
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
+
+.lesson a {
+  color: #E5BE7A;
+  font-size: 25px;
+  font-family: 'Volkhov', serif;
+}
+
+
+
+//b, strong {
+//  font-size: 25px;
+//  font-family: 'Volkhov', serif;
+//}
+
+.lesson a b {
+  font-weight: 100;
+  font-size: 25px;
+}
+
