--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,13 +3,13 @@
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
   <%= image_tag @course.image.to_s, class: 'img-fluid' %> 
-<br />
+  <br />
   <div class="row">
 	  <div class="col-sm-4 col-12 text-center">
 	  	<span class="badge badge-default">
 	    	<%= number_to_currency @course.cost %>
-		</span>
-		<% if current_user && current_user == @course.user %>
+		  </span>
+		  <% if current_user && current_user == @course.user %>
 	      <br />
 	      <br />
 	      <%= link_to 'Administrator', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
@@ -18,22 +18,32 @@
 
 	  <div class="col-sm-8 col-12">
 	    <%= @course.description %>
-  	  </div>
-  	  <div class="col-12">
-          <% @course.sections.each do |section| %>
-            <div class="section">
-              <%= section.title %>
-              <% section.lessons.each do |lesson| %>
-             <div class="lesson">
+    </div>
+  </div>
+
+  <div class="col-12">
+  <% @course.sections.each do |section| %>
+    <br /><br />
+    <div class="section">
+      <h2>
+        <%= section.title %>
+      </h2>
+      <div class="row">
+        <% section.lessons.each do |lesson| %>
+          <div class="col-12 col-sm-6">
+            <div class="lesson text-center">
+              <br />
               <%= link_to lesson_path(lesson) do %>
-                <b><%= lesson.title %></b>
-                -
-                <%= lesson.subtitle %>
+               <b><%= lesson.title %></b>
+                <br />
+               <%= lesson.subtitle %>
               <% end %>
-             </div>
-            <% end %>
             </div>
-    	  <% end %>
-  	  </div>
+          </div>
+        <% end %>
+      </div>
+      <br class="clr" />
+    </div>
+  <% end %>
   </div>
 </div>
