--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,13 +10,13 @@
     	<%= link_to course.title, course_path(course) %>
     </h2>
     <br />
-    <%= image_tag course.image.to_s, class: 'img-fluid' %> 
+    <%= image_tag course.image.to_s, class: 'img-fluid' %>
     <div class="row">
 	    <div class="col-sm-8 col-12">
 	      <%= course.description %>
 	    </div>
 	    <div class="col-sm-4 col-12 text-center">
-	      <%= link_to 'Enroll', course_path(course), class: 'btn btn-primary btn-large' %>
+	      <%= link_to 'View', course_path(course), class: 'btn btn-primary btn-large' %>
 	    </div>
 	</div>
 	<br class="clr" />
