Created Enrollments in DB
Former-commit-id: 5ff603884f422818fdd1dd4308bb61655e794a60

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -186,3 +186,9 @@ a:hover {
   font-size: 25px;
 }
 
+
+.badge-info {
+  background: #E5BE7A;
+  color: #24838A;
+  font-family: 'Volkhov', serif;
+}
