--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -13,6 +13,20 @@
     });
 </script>
 
+<script>
+    $(function() {
+        $('.sections').sortable({
+            update: function( event, ui ) {
+                $.ajax({
+                    type: 'PUT',
+                    url: ui.item.data('update-url'),
+                    dataType: 'json',
+                    data: { section: { row_order_position: ui.item.index() } }
+                });
+            }
+        });
+    });
+</script>
 
 <br />
 <div class="booyah-box col-10 offset-1">
@@ -25,10 +39,10 @@
   	<%= link_to 'Add a new section', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
   </div>
         <%= image_tag current_course.image.to_s, class: 'img-fluid' %> 
-   <ul>
+   <ul class="sections">
      <% current_course.sections.rank(:row_order).each do |section| %>
-      <li>
-        <%= section.title %>
+      <li data-update-url="<%= instructor_section_path(section) %>">
+       <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
           <ul class="lessons">
             <% section.lessons.rank(:row_order).each do |lesson| %>
