--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -17,9 +17,12 @@ body {
   width: 100%;
   min-height: 100px;
   background-color: rgba(36, 32, 33, 0.9);
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Volkhov', serif;
   padding: 10px 0px;
   margin-top: 30px;
+  font-weight: 100;
+  color: #24838A;
+  font-size: small;
   
 }
 
@@ -28,3 +31,10 @@ body {
 	color: #EDE7DB
 }
 
+.social-button {
+  margin: 4px;
+}
+
+.social a:hover {
+  text-decoration: none;
+}
