--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,52 @@
 
     <div id="footer">
       <div class="container">
-        <b>Administrators</b>
-        <br />
-        <%= link_to 'Create a Course', new_instructor_course_path %>
+        <div class="row">
+          <div class="col-12 col-sm-3">
+            <b>Teachers</b>
+            <br />
+            <%= link_to 'Teach a Course', new_instructor_course_path %>
+            <br />
+            <%= link_to 'My Dashboard', dashboard_path %>
+          </div>
+
+          <div class="col-12 col-sm-3">
+            <b>About</b>
+            <br />
+            <%= link_to 'Team', '#' %>
+            <br />
+            <%= link_to 'Careers', '#' %>
+            <br />
+            <%= link_to 'Privacy Policy', '#' %>
+          </div>
+          <div class="col-12 col-sm-3">
+            <b>Contact</b>
+            <br />
+            dev.madeline.young@gmail.com
+            <br />
+            12345 Waterway Drive
+            <br />
+            The Woodlands TX, 77380
+          </div>
+
+          <div class="col-12 col-sm-3 social">
+            <b>Social</b>
+            <br />
+            <br />
+
+            <%= link_to 'http://github.com/madelinejy' do %>
+              <span class="fa fa-github-square fa-2x social-button"></span>
+            <% end %>
+
+            <%= link_to 'http://facebook.com' do %>
+              <span class="fa fa-facebook-square fa-2x social-button"></span>
+            <% end %>
+
+            <%= link_to 'http://twitter.com' do %>
+              <span class="fa fa-twitter-square fa-2x social-button"></span>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
     <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
